Configure GitHub action

--- a/config/bootstrap/bootstrap-cli-config.yml
+++ b/config/bootstrap/bootstrap-cli-config.yml
@@ -56,29 +56,52 @@ bootstrap:
     # Mapping between IDP (Azure Active Directory) groups and CDF groups.
     idp-cdf-mappings:
     # Support multiple CDF Projects, like dev/test/prod in one config.
-        - cdf-project: <CDF project name> # i.e. bootcamp-01-test
+        - cdf-project: cdf-bootcamp-41-test
           mappings:
               - cdf-group: cdf:root
-                idp-source-id: <AAD Group Object id>
-                idp-source-name: <AAD Group name>
+                idp-source-id: b74814d6-6f17-48c6-9721-2136bad94329 #<AAD Group Object id>
+                idp-source-name: bootcamp-41-test-admin # <AAD Group name>
               - cdf-group: cdf:all:owner
-                idp-source-id: <AAD Group Object Id> # for the AAD Group to be matched to cdf-group
-                idp-source-name: <AAD Group name> # i.e. bootcamp-01-test-all-owner
+                idp-source-id: 43c6d431-5b49-4ae3-be7f-500714a76a5f # <AAD Group Object Id> # for the AAD Group to be matched to cdf-group
+                idp-source-name: bootcamp-41-test-all-owner # <AAD Group name> # i.e. bootcamp-01-test-all-owner
               - cdf-group: cdf:all:read
-                idp-source-id: <AAD Group Object Id> # for the AAD Group to be matched to cdf-group
-                idp-source-name: <AAD Group name> # i.e. bootcamp-01-test-all-read
+                idp-source-id: 81c2adae-ebb1-44d4-98c5-f5ace5ea3413 # <AAD Group Object Id> # for the AAD Group to be matched to cdf-group
+                idp-source-name: bootcamp-41-test-all-read # <AAD Group name> # i.e. bootcamp-01-test-all-read
+        - cdf-project: cdf-bootcamp-41-prod
+          mappings:
+              - cdf-group: cdf:root
+                idp-source-id: 8138a5b6-d1b8-4f00-8162-6ef7a531dcc4 #<AAD Group Object id>
+                idp-source-name: bootcamp-41-prod-admin # <AAD Group name>
+              - cdf-group: cdf:all:owner
+                idp-source-id: 12138203-d117-42a6-9d0d-015f54597c13 # <AAD Group Object Id> # for the AAD Group to be matched to cdf-group
+                idp-source-name: bootcamp-41-prod-all-owner # <AAD Group name> # i.e. bootcamp-01-test-all-owner
+              - cdf-group: cdf:all:read
+                idp-source-id: 042c7963-d4cf-4b2b-a6c9-9fb0f854e14e # <AAD Group Object Id> # for the AAD Group to be matched to cdf-group
+                idp-source-name: bootcamp-41-prod-all-read # <AAD Group name> # i.e. bootcamp-01-test-all-read
 
 
     namespaces:
-        # Typical config will have a namespace for data sources ("src") and a namespace for use cases ("uc")
-        - ns-name: <Namespace name>
-          description: Data sources for the Ice Cream Factory # HINT
-
-          # Node names will normally follow src:001:srcname or uc:001:usecasename naming convention
+    # Typical config will have separate namespace by data source ("src") and use cases ("uc")
+        - ns-name: src
+          description: Sources used for data extraction
+        # Description names will normally follow src:001:srcname or uc:001:usecasename naming convention
           ns-nodes:
-              - node-name: <Node name>
-                description: Data from SAP # HINT
-        # HINT: Add another namespace below
+              - node-name: src:001:sap
+                description: Source 01 data from SAP
+              - node-name: src:002:opcua
+                description: Source 02 data from opcua
+        # Typical config will have separate namespace by data source ("src") and use cases ("uc")
+        - ns-name: uc
+          description: Use cases representing the data/products
+
+        # Description names will normally follow src:001:srcname or uc:001:usecasename naming convention
+          ns-nodes:
+              - node-name: uc:001:oee
+                description: Use case 001 Over all Equipment effectiveness
+                shared-access:
+                    read:
+                        - node-name: src:001:sap
+                        - node-name: src:002:opcua
 
 
 # de-facto standards for CDF CogniteClient and logger configuration.
