--- a/config/extpipes/extpipes-cli-config.yml
+++ b/config/extpipes/extpipes-cli-config.yml
@@ -49,3 +49,20 @@ rawdbs:
                         email: lavanya.kannan@ey.com
                         role: Bootcamp 41 Trainee
                         send-notification: false
+
+    - rawdb-name: src:002:opcua:db
+      dataset-external-id: src:002:opcua:ds
+      short-name: opcua
+      rawtables:
+          - rawtable-name: datapoints
+            pipelines:
+        # source is a short-name identifying the pipeline source being
+        # a 'db-extractor (db)', an 'Azure Function (az-func)',
+        # or 'Azure Data Factory (adf)', 'Python script (py)', ..
+                - source: ice-cream-api
+                  schedule: Continuous
+                  contacts:
+                      - name: Lavanya Kannan
+                        email: lavanya.kannan@ey.com
+                        role: Bootcamp 41 Trainee
+                        send-notification: false
